--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <!-- start navbar here -->
+    <nav class="navbar">
+      <div class="navbar-center">
+        <span class="navbar-icon">
+          <i class="fas fa-bars"></i>
+        </span>
+    
+        <div class="cart-button">
+          <span class="navbar-icon">
+            <i class="fas fa-cart-plus"></i>
+          </span>
+          <div class="cart-items">0</div>
+        </div>
+      </div>
+    </nav>
+    <!-- end navbar here -->
   <script src="app.js"></script>
 </body>
 
