created hero home page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
       </div>
     </nav>
     <!-- end navbar here -->
+
+    <!-- start hero here -->
+    <header class="hero">
+      <div class="banner">
+        <h1 class="banner-title">
+          Furniture Collection
+        </h1>
+        <button class="banner-btn">Shop Now</button>
+      </div>
+    </header>
+    <!-- end hero here -->
   <script src="app.js"></script>
 </body>
 
