display ui, saved products in local storage, added product in cart, displyed cart values

--- a/index.html
+++ b/index.html
@@ -1,129 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sammy E-Shop</title>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.7/css/all.css"
-    />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
 
-  <body>
-    <!-- start navbar here -->
-    <nav class="navbar">
-      <div class="navbar-center">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sammy House Furniture</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" />
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- start navbar here -->
+  <nav class="navbar">
+    <div class="navbar-center">
+      <span class="navbar-icon">
+        <i class="fas fa-bars"></i>
+      </span>
+
+      <div class="cart-button">
         <span class="navbar-icon">
-          <i class="fas fa-bars"></i>
+          <i class="fas fa-cart-plus"></i>
         </span>
-
-        <div class="cart-button">
-          <span class="navbar-icon">
-            <i class="fas fa-cart-plus"></i>
-          </span>
-          <div class="cart-items">0</div>
-        </div>
+        <div class="cart-items">0</div>
       </div>
-    </nav>
-    <!-- end navbar here -->
+    </div>
+  </nav>
+  <!-- end navbar here -->
 
-    <!-- start hero here -->
-    <header class="hero">
-      <div class="banner">
-        <h1 class="banner-title">
-          Furniture Collection
-        </h1>
-        <button class="banner-btn">Shop Now</button>
+  <!-- start hero here -->
+  <header class="hero">
+    <div class="banner">
+      <h1 class="banner-title">
+        Furniture Collection
+      </h1>
+      <button class="banner-btn">Shop Now</button>
+    </div>
+  </header>
+  <!-- end hero here -->
+
+  <!-- start products here -->
+  <section class="products">
+    <div class="section-title">
+      <h2 class="">our products</h2>
+    </div>
+    <div class="products-center">
+
+    </div>
+  </section>
+
+  <!-- start cart here -->
+  <div class="cart-overlay">
+    <div class="cart">
+      <span class="close-cart">
+        <i class="fas fa-window-close"></i>
+      </span>
+      <h2 class="">your cart</h2>
+      <div class="cart-content">
+        <!-- start cart item here -->
+        <!-- <div class="cart-item">
+           
+          </div> -->
+        <!-- end cart item here -->
       </div>
-    </header>
-    <!-- end hero here -->
-
-    <!-- start products here -->
-    <section class="products">
-      <div class="section-title">
-        <h2 class="">our Houses</h2>
+      <div class="cart-footer">
+        <h3 class="">your total : $ <span class="cart-total">0</span></h3>
+        <button class="clear-cart banner-btn">clear all</button>
       </div>
-      <div class="products-center">
-        <!-- start single products here -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/prod-1.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              add to bag
-            </button>
-          </div>
-          <h3>queen bed</h3>
-          <h4>$890</h4>
-        </article>
-        <!-- end single products here -->
+    </div>
+  </div>
+  <!-- end cart here -->
 
-        <!-- start single products here -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/prod-2.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              add to bag
-            </button>
-          </div>
-          <h3>queen bed</h3>
-          <h4>$890</h4>
-        </article>
-        <!-- end single products here -->
+  <!-- end products here -->
+  <script src="app.js"></script>
+</body>
 
-        <!-- start single products here -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/prod-3.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              add to bag
-            </button>
-          </div>
-          <h3>queen bed</h3>
-          <h4>$890</h4>
-        </article>
-        <!-- end single products here -->
-
-        <!-- start single products here -->
-        <article class="product">
-          <div class="img-container">
-            <img
-              src="./images/prod-6.jpeg"
-              alt="product"
-              class="product-img"
-            />
-            <button class="bag-btn" data-id="1">
-              <i class="fas fa-shopping-cart"></i>
-              add to bag
-            </button>
-          </div>
-          <h3>queen bed</h3>
-          <h4>$890</h4>
-        </article>
-        <!-- end single products here -->
-
-        <!-- start cart here -->
-      </div>
-      <div class="cart-overlay"></div>
-      <!-- end cart here -->
-    </section>
-    <!-- end products here -->
-    <script src="app.js"></script>
-  </body>
 </html>
