set up contenfull to add products dynamically

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
   <!-- end cart here -->
 
   <!-- end products here -->
+  <!-- contentfull script-->
+  <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+  <!-- the app.js-->
   <script src="app.js"></script>
 </body>
 
