--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <span class="navbar-icon">
         <i class="fas fa-bars"></i>
       </span>
-
+      <div class="logo"> Sammy <span>E-shop</span></div>
       <div class="cart-button">
         <span class="navbar-icon">
           <i class="fas fa-cart-plus"></i>
@@ -31,7 +31,7 @@
   <header class="hero">
     <div class="banner">
       <h1 class="banner-title">
-        Furniture Collection
+        Best House Furniture 
       </h1>
       <button class="banner-btn">Shop Now</button>
     </div>
@@ -41,7 +41,7 @@
   <!-- start products here -->
   <section class="products">
     <div class="section-title">
-      <h2 class="">our products</h2>
+      <h2 class="">our items</h2>
     </div>
     <div class="products-center">
 
